updated method 'onSeminarbuchungStornieren' with loggedUserId

--- a/src/app/components/seminarbuchung/seminarbuchung.component.html
+++ b/src/app/components/seminarbuchung/seminarbuchung.component.html
@@ -13,7 +13,7 @@
             <td>{{seminarbuchung.buchungsnummer}}</td>
             <td>{{seminarbuchung.buchungsdatum}}</td>
             <td>{{seminarbuchung.seminar.seminarTitle}}</td>
-            <td><button type="submit" (click)="onSeminarbuchungStornieren(seminarbuchung.buchungsnummer, 1);" class="btn btn-sm btn-outline-danger">Stornieren</button></td>
+            <td><button type="submit" (click)="onSeminarbuchungStornieren(seminarbuchung.buchungsnummer);" class="btn btn-sm btn-outline-danger">Stornieren</button></td>
         </tr>
     </tbody>
 </table>
