added button 'Abmelden' to header with function 'logout'

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,5 +3,6 @@
     <li><a href="/seminarraum">Seminarraum</a></li>
     <li><a href="/buchung">Seminarbuchung</a></li>
     <li><a href="/about">About</a></li>
+    <li><a (click)="logout()" href="#">Abmelden</a></li>
     <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
 </ul>
