--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,6 @@
 <ul>
     <li><a class="active" href="/">Home</a></li>
+    <li><a href="/seminar">Seminar</a></li>
     <li><a href="/seminarraum">Seminarraum</a></li>
     <li><a href="/buchung">Seminarbuchung</a></li>
     <li><a href="/about">About</a></li>
