set class margin-top-2 from Bootstrap

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,4 +8,4 @@
     <li><a (click)="logout()" href="#">Abmelden</a></li>
     <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
 </ul>
-<button class=" btn btn-outline-secondary" (click)="onLogin()">Loging</button>
+<button class="btn btn-outline-secondary mt-2" (click)="onLogin()">Loging</button>
