add user infos in 'PersonComponent.html'

--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -1,1 +1,12 @@
 <button (click)="redirectToProfile()" class="btn btn-sm btn-outline-info">Account Management</button>
+<div class="container">
+    <div>
+        <label for="vorname">Vorname: <span></span></label>
+    </div>
+    <div>
+        <label for="vorname">Nachname: <span></span></label>
+    </div>
+    <div>
+        <label for="vorname">Adresse: <span></span></label>
+    </div>
+</div>
