--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,10 @@
 <ul>
     <li><a class="active" href="/">Home</a></li>
-    <li><a href="/seminar">Seminar</a></li>
-    <li><a href="/seminarraum">Seminarraum</a></li>
-    <li><a href="/buchung">Seminarbuchung</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/user">{{person.vorname}}&nbsp;{{person.nachname}}</a></li>
+    <li><a routerLink="/seminar">Seminar</a></li>
+    <li><a routerLink="/seminarraum">Seminarraum</a></li>
+    <li><a routerLink="/buchung">Seminarbuchung</a></li>
+    <li><a [routerLink]="'/about'">About</a></li>
+    <li><a [routerLink]="'/user'">{{person.vorname}}&nbsp;{{person.nachname}}</a></li>
     <li><a (click)="logout()" href="#">Abmelden</a></li>
     <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
 </ul>
