added class 'Dropdown toggle'

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
     <a href="https://www.adesso.de" target="_blank"><img src="assets/img/adesso-log.svg.png" width="150" height="50"></a>
     
     <button 
-    class="btn btn-outline-secondary" 
+    class="btn btn-outline-secondary dropdown-toggle" 
     data-toggle="dropdown" 
     id="menu-dropdown"
     aria-haspopup="true"
