updated name of Seminarleiter in SeminarAdd Form

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -112,7 +112,7 @@
                     <input type="number" ngModel name="teilnehmeranzahl" class="form-control" id="add-teilnehmeranzahl">
                 </div>
                 <div>
-                    <label for="add-seminarleiter">Seminarleiter</label>
+                    <label for="add-seminarleiter">Seminarleiter ID</label>
                     <input type="text" ngModel name="seminarleiter" class="form-control" id="add-seminarleiter" required="">
                 </div>
                 <div>
