fixed bug in SeminarAddForm

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -73,7 +73,7 @@
 </div>
 
 <!-- Add Modal -->
-<div class="modal fade" id="addSeminarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" *ngIf="updateMode">
+<div class="modal fade" id="addSeminarModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <!-- modal-content -->
         <div class="modal-content">
