updated Bearbeiten Button in PersonCompoent

--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -17,7 +17,7 @@
             </span>
         </label>
     </div>
-    <button class="btn btn-debug btn-outline-secondary btn-sm" data-toggle="modal" data-target= "#editModal">barbeiten</button>
+    <button class="btn btn-debug btn-outline-secondary btn-sm" data-toggle="modal" data-target= "#editModal">Bearbeiten</button>
 </div>
 
 <!-- Edit Modal -->
