--- a/src/app/components/person/person.component.html
+++ b/src/app/components/person/person.component.html
@@ -44,11 +44,12 @@
 
                 </div>
                 <div>
-                    <label for="strasse">Geburtsdatum</label>
+                    <label for="geburtsdatum">Geburtsdatum</label>
                     <input type="date" ngModel= {{person.geburtsdatum}} name="geburtsdatum" class="form-control" id="geburtsdatum" required="">
                 </div>
-                <input type="hidden" ngModel= {{person.adresse?.id}} name="strasse_id" class="form-control" id="strasse">
+                
                 <div ngModelGroup="adresse" #adresse="ngModelGroup">
+                    <input type="hidden" ngModel= {{person.adresse?.id}} name="id" class="form-control" id="strasse_id">
                     <div>
                         <label for="strasse">Straße</label>
                         <input type="text" ngModel= {{person.adresse?.strasse}} name="strasse" class="form-control" id="strasse">
