changed the type of Input 'Seminarleiter'

--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -113,7 +113,7 @@
                 </div>
                 <div>
                     <label for="add-seminarleiter">Seminarleiter ID</label>
-                    <input type="text" ngModel name="seminarleiter" class="form-control" id="add-seminarleiter" required="">
+                    <input type="number" ngModel name="seminarleiter" class="form-control" id="add-seminarleiter" required="">
                 </div>
                 <div>
                     <label for="add-voraussetzung">Voraussetzung</label>
