--- a/src/app/components/seminar/seminar.component.html
+++ b/src/app/components/seminar/seminar.component.html
@@ -199,7 +199,7 @@
                 <!-- modal-footer -->
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Abbrechen</button>
-                    <button [disabled]="editeForm.invalid"  (click)="onAddSeminar(editeForm)" type="submit" class="btn btn-primary" data-dismiss="modal">Speicher</button>
+                    <button [disabled]="editeForm.invalid"  (click)="onUpdateSeminar(editeForm)" type="submit" class="btn btn-primary" data-dismiss="modal">Speicher</button>
                 </div>
             </form>
         </div>
